--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -1,2 +1,8 @@
 <h1>ProductCategories#new</h1>
-<p>Find me in app/views/product_categories/new.html.erb</p>
+<%= form_for (@product_category) do |f| %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+
+    <%= f.submit %>
+<% end %>
+
