--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,2 +1,7 @@
 <h1>Stores#new</h1>
-<p>Find me in app/views/stores/new.html.erb</p>
+<%= form_for (@store) do |f| %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+
+    <%= f.submit %>
+<% end %>
