--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -2,7 +2,8 @@
 <%= form_for (@product_category) do |f| %>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-
+    <%= f.radio_button :expense, true %>
+    <%= f.radio_button :expense, false %>
     <%= f.submit %>
 <% end %>
 
