--- a/app/views/date_purchases/new.html.erb
+++ b/app/views/date_purchases/new.html.erb
@@ -2,17 +2,16 @@
 
 <%= form_for(@date_purchase) do |f| %>
     <%= f.label :date %><br>
-    <%= f.date_field :date %><br>
-    <% 2.times do %>
-        <%= f.fields_for :products do |product| %>
-            <%= product.label :name %>
-            <%= product.text_field :name %>
-            <%= product.label :price %>
-            <%= product.number_field :price %>
-            <%= product.collection_select :store_id, Store.all, :id, :name %>
-            <%= product.collection_select :product_category_id, ProductCategory.all, :id, :name %>
-            <br>
-        <% end %>
+    <%= f.date_field :date %><br
+    <%= f.nested_fields_for :products do |product| %>
+        <%= product.label :name %>
+        <%= product.text_field :name %>
+        <%= product.label :price %>
+        <%= product.number_field :price %>
+        <%= product.collection_select :store_id, Store.all, :id, :name %>
+        <%= product.collection_select :product_category_id, ProductCategory.all, :id, :name %>
+        <br>
     <% end %>
     <%= f.submit %>
+    <%= f.add_nested_fields_link :products, "Add Form", role: "button" %>
 <% end %>
