--- a/app/views/product_categories/edit.html.erb
+++ b/app/views/product_categories/edit.html.erb
@@ -1,8 +1,7 @@
-<h1>ProductCategories#new</h1>
+<h1>ProductCategories#edit</h1>
 <%= form_for (@product_category) do |f| %>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-    <label><%= f.elect :expense, [["収入", false],["支出",true]] %>収入or支出</label>
+    <label><%= f.select :expense, [["収入", false],["支出",true]] %>収入or支出</label>
     <%= f.submit %>
 <% end %>
-
