--- a/app/views/date_purchases/edit.html.erb
+++ b/app/views/date_purchases/edit.html.erb
@@ -10,6 +10,7 @@
         <%= product.number_field :price %>
         <%= product.collection_select :store_id, Store.all, :id, :name %>
         <%= product.collection_select :product_category_id, ProductCategory.all, :id, :name %>
+        <%= product.check_box :_destroy %>
         <br>
     <% end %>
     <%= f.submit %>
