--- a/app/views/date_purchases/index.html.erb
+++ b/app/views/date_purchases/index.html.erb
@@ -1,2 +1,6 @@
 <h1>DatePurchases#index</h1>
-<p>Find me in app/views/date_purchases/index.html.erb</p>
+
+<%= @date_purchase.each do |d| %>
+<h1><%= d.date %></h1>
+
+<% end %>
