--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,7 +25,7 @@
     </li>
 
     <li class="nav-item dropdown">
-        <%= link_to "Store", product_categories_path, class: "nav-link dropdown-toggle" ,id: "categoryMenu", role: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false"%>
+        <%= link_to "ProductCategory", product_categories_path, class: "nav-link dropdown-toggle" ,id: "categoryMenu", role: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false"%>
         <div class="dropdown-menu" aria-labelledby="categoryMenu">
         <%= link_to "Show Purchase", product_categories_path, class: "dropdown-item" %>
         <%= link_to "New Purchase", new_product_category_path, class: "dropdown-item" %>
