--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Stores#new</h1>
+<div class="my-form">
 <%= form_for (@store) do |f| %>
     <div class="form-group">
         <%= f.label :name , "店の名前" %>
@@ -6,3 +7,4 @@
     </div>
     <%= f.submit "追加", class: "btn btn-primary" %>
 <% end %>
+</div>
