--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -5,3 +5,12 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+.my-nest-form {
+    width: 90%;
+    margin: auto;
+    border: solid 1px #BBBBBB;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
