--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -10,7 +10,9 @@
            <%= f.label :expense , "収入or支出" %>
            <%= f.select :expense, [["収入", false],["支出",true]], {},  class: "form-control"%>
         </div>
-        <%= f.submit "追加", class: "btn btn-primary" %>
+        <div class="form-group">
+            <%= f.submit "追加", class: "btn btn-primary" %>
+        </div>
     <% end %>
 </div>
 
