--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -5,6 +5,8 @@
         <%= f.label :name , "店の名前" %>
         <%= f.text_field :name , class: "form-control" %>
     </div>
-    <%= f.submit "追加", class: "btn btn-primary" %>
+    <div class="form-group">
+        <%= f.submit "追加", class: "btn btn-primary" %>
+    </div>
 <% end %>
 </div>
