--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,7 +1,12 @@
 <h1>Stores#edt</h1>
+<div class="my-form">
 <%= form_for (@store) do |f| %>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-
-    <%= f.submit %>
+    <div class="form-group">
+        <%= f.label :name , "店の名前" %>
+        <%= f.text_field :name , class: "form-control" %>
+    </div>
+    <div class="form-group">
+        <%= f.submit "変更", class: "btn btn-primary" %>
+    </div>
 <% end %>
+</div>
