--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -3,10 +3,10 @@
 <%= form_for (@store) do |f| %>
     <div class="form-group">
         <%= f.label :name , "店の名前" %>
-        <%= f.text_field :name , class: "form-control" %>
+        <%= f.text_field :name , class: "form-control", required: true %>
     </div>
     <div class="form-group">
-        <%= f.submit "変更", class: "btn btn-primary" %>
+        <%= f.submit "追加", class: "btn btn-primary" %>
     </div>
 <% end %>
 </div>
