--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -1,8 +1,9 @@
+<h1>カテゴリ一覧</h1>
 <div class="show-table">
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th scope="col">カテゴリーの名前</th>
+                <th scope="col">カテゴリßの名前</th>
             </tr>
         </thead>
         <tbody>
