--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -3,7 +3,7 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th scope="col">カテゴリßの名前</th>
+                <th scope="col">カテゴリの名前</th>
             </tr>
         </thead>
         <tbody>
