詳細情報の画面の合計金額の表示を変更

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -42,3 +42,11 @@ td:hover {
     border: solid 1px #BBBBBB;
     padding: 10px;
 }
+
+.total-cost {
+    text-align: right;
+    margin-right: 200px;
+    margin-top: 50px;
+    text-decoration: underline;
+    color: red;
+}
