--- a/app/views/date_purchases/show.html.erb
+++ b/app/views/date_purchases/show.html.erb
@@ -20,5 +20,5 @@
             </tbody>
     </table>
    </div>
-   <h1><%= @date_purchase.total_cost %>円</h1>
 <% end %>
+<h1 class="total-cost"><%= @date_purchase.total_cost %>円</h1>
