表記ミスを修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,10 +25,10 @@
     </li>
 
     <li class="nav-item dropdown">
-        <%= link_to "カテゴリー", product_categories_path, class: "nav-link dropdown-toggle" ,id: "categoryMenu", role: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false"%>
+        <%= link_to "カテゴリ", product_categories_path, class: "nav-link dropdown-toggle" ,id: "categoryMenu", role: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false"%>
         <div class="dropdown-menu" aria-labelledby="categoryMenu">
-        <%= link_to "カテゴリー一覧", product_categories_path, class: "dropdown-item" %>
-        <%= link_to "カテゴリー新規登録", new_product_category_path, class: "dropdown-item" %>
+        <%= link_to "カテゴリ一覧", product_categories_path, class: "dropdown-item" %>
+        <%= link_to "カテゴリ新規登録", new_product_category_path, class: "dropdown-item" %>
         </div>
     </li>
   </ul>
