トップページへのパスを作った

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="#">私の家計簿</a>
+<a class="navbar-brand" href="/">MyAccountBook</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarText">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
-      <a class="nav-link" href="#">ダッシュボード<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="/">ダッシュボード<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item dropdown">
         <%= link_to "家計簿", date_purchases_path, class: "nav-link dropdown-toggle" ,id: "purchaseMenu", role: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false"%>
