１週間の出費のグラフを整形

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.dashboard-component {
+    border: solid 1px #BBBBBB;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#weekBar {
+    width: 400px;
+    height: 250px;
+}
