--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,17 +1,23 @@
 <h1>ダッシュボード</h1>
 
-<canvas id="expenseBarChart" width="400" height="400"></canvas>
+<div class="dashboard-component" id="weekBar">
+    <canvas id="expenseByWeekBarChart"></canvas>
+</div>
+
+<div class="dashboard-component" id="weekBar">
+    <canvas id="expenseBarChart"></canvas>
+</div>
 <canvas id="expensePieChart" width="400" height="400"></canvas>
 <script>
 
-let weekPrices = [];
-let date = gon.week;
+weekPrices = [];
+date = gon.week;
 
 gon.date_purchase.forEach(d => {if (d == null) {weekPrices.push(0)} else {weekPrices.push(d.total_cost)}});
 
 
-let barChartName = document.getElementById('expenseBarChart');
-let batChart = new Chart(barChartName, {
+barChartName = document.getElementById('expenseByWeekBarChart');
+batChart = new Chart(barChartName, {
     type: 'bar',
     data: {
         labels: date,
@@ -38,36 +44,41 @@ let batChart = new Chart(barChartName, {
     }
 });
 
-let productCategoryCost = []
-let productCategoryName = []
+productCategoryCost = []
+productCategoryName = []
 
 gon.product.forEach(d => { productCategoryCost.push(d.total_cost); productCategoryName.push(d.name);});
 
-let pieChartName = document.getElementById('expensePieChart');
-let pieChart = new Chart(pieChartName, {
+pieChartName = document.getElementById('expensePieChart');
+pieChart = new Chart(pieChartName, {
     type: 'pie',
     data: {
         labels: productCategoryName,
         datasets: [{
             label: '1週間の支出種類',
             data: productCategoryCost,
-            backgroundColor: 
-                'rgba(255, 99, 132, 0.2)'
-            ,
-            borderColor: 
-                'rgba(255, 99, 132, 1)'
-            ,
+            backgroundColor: [
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)',
+            'rgba(75, 192, 192, 0.2)',
+            'rgba(153, 102, 255, 0.2)',
+            'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [             
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)',
+            'rgba(75, 192, 192, 0.2)',
+            'rgba(153, 102, 255, 0.2)',
+            'rgba(255, 159, 64, 0.2)'
+            ],
             borderWidth: 1
         }]
     },
     options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
+
+
     }
 });
 </script>
