scopeを用いてリファクタリング

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -12,3 +12,13 @@
     width: 400px;
     height: 250px;
 }
+
+#monthBar {
+    width: 400px;
+    height: 250px;
+}
+
+#yearBar {
+    width: 400px;
+    height: 250px;
+}
